Change History
================

0.01	May 8, 2012
	- initial release

0.02	June 4, 2012
	- changes to the way Load Balancing is implemented
	- fixes so that get_slice() works properly when the validator is not a composite
	- added the ability to manually provide the validation classes
	- general bug fixes
	- added ability to set a timeout on thrift calls (set timeout => val in object creation)

0.03	June 29, 2012
	-serialize and deserialize get_range_slice requests properly
	-add logic to get_slice so it properly understands equalities (less_than_equal, equal, or greater_than_equal)

0.04	October 10, 2012
	-fixes a bunch of packing and unpacking issues
	-returns more meaningful errors (but this could still use work)
	-includes a multiget_slice function
	-supports column families with metadata and properly figures out what type of validation to use on each column name
	-fixes timestamp bug to use microseconds to keep up with changes to cql in 1.1.x releases of cassandra
	-fixes unpacking counter columns correctly

0.041	October 10, 2012
	-Minor clarification changes to description in documentation as asked by 'Anonymous [anonymous@foto.ro1.torservers.net]'

0.050	January 30, 2013
	- Incompatible changes made to CQL3 results. Removed ttl and timestamp columns. Result columns now point directly to the values.
    	- Makefile now does not do live tests by default, they must now be enabled manually.